[package]
name = "gotenberg-rs"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["stream", "multipart"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tokio-stream = "0.1"