[package]
name = "gotenberg-rs"
version = "0.1.0"
authors = ["Moritz Bischof <moritz.bischof@aleph-alpha.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream", "multipart"] }
tokio-stream = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
futures = "0.3"